--- a/index.html
+++ b/index.html
@@ -303,6 +303,20 @@
                     </div>
                 </div>
             </div>
+            <ul class="header__sort-bar">
+                <li class="header__sort-item">
+                    <a href="" class="header__sort-link">Liên Quan</a>
+                </li>
+                <li class="header__sort-item header__sort-item--active">
+                    <a href="" class="header__sort-link">Mới nhất</a>
+                </li>
+                <li class="header__sort-item">
+                    <a href="" class="header__sort-link">Bán chạy</a>
+                </li>
+                <li class="header__sort-item">
+                    <a href="" class="header__sort-link">Giá</a>
+                </li>
+            </ul>
         </header>
 
         <div class="app__container">
@@ -869,9 +883,9 @@
         <div class="modal__overlay">
 
         </div>
-        <div class="modal__body">    -->
-            <!-- Register form -->
-            <!-- <div class="auth-form">
+        <div class="modal__body">    
+             Register form
+            <div class="auth-form"> 
                 <div class="auth-form__container">
                     <div class="auth-form__header">
                         <h3 class="auth-form__heading"> Đăng Ký</h3>
@@ -919,10 +933,10 @@
                         </span>
                     </a>
                 </div>
-            </div>   -->
+            </div>  
 
-            <!-- Login form -->
-            <!-- <div class="auth-form">
+            Login form
+            <div class="auth-form"> 
                 <div class="auth-form__container">
                     <div class="auth-form__header">
                         <h3 class="auth-form__heading">Đăng Nhập</h3>
@@ -970,7 +984,7 @@
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>  -->
 </body>
 
 </html>
