--- a/index.html
+++ b/index.html
@@ -384,6 +384,38 @@
                             </div>
                         </div>
 
+                        <nav class="mobile-category">
+                            <ul class="mobile-category__list">
+                                <li class="mobile-category__item">
+                                    <a href="" class="mobile-category__link"> Áo khoác da , áo khoác nam</a>
+                                </li>
+                                <li class="mobile-category__item">
+                                    <a href="" class="mobile-category__link"> Áo jean</a>
+                                </li>
+                                <li class="mobile-category__item">
+                                    <a href="" class="mobile-category__link"> Quần</a>
+                                </li>
+                                <li class="mobile-category__item">
+                                    <a href="" class="mobile-category__link"> Vest</a>
+                                </li>
+                                <li class="mobile-category__item">
+                                    <a href="" class="mobile-category__link"> Combo </a>
+                                </li>
+                                <li class="mobile-category__item">
+                                    <a href="" class="mobile-category__link"> Áo khoác da , áo khoác nam</a>
+                                </li>
+                                <li class="mobile-category__item">
+                                    <a href="" class="mobile-category__link"> Áo khoác da , áo khoác nam</a>
+                                </li>
+                                <li class="mobile-category__item">
+                                    <a href="" class="mobile-category__link"> Áo khoác da , áo khoác nam</a>
+                                </li>
+                                <li class="mobile-category__item">
+                                    <a href="" class="mobile-category__link"> Áo khoác da , áo khoác nam</a>
+                                </li>
+                            </ul>
+                        </nav>
+
                         <div class="home-product">
                             <!-- Frid -> Row ->Column -->
                             <div class="row sm-gutter">
